# Rust-Oxide

./: .dockerignore  .env  .release-please-manifest.json  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  main2.rs  release-please-config.json  sqlite-smoke.db
.github/workflows/: lockfile-check.yml  release-please.yml  release.yml  rust-gate.yml
crates/base_entity_derive/: Cargo.toml
crates/base_entity_derive/src/: lib.rs
crates/companion_cli/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
crates/companion_cli/crates/companion_cli/: CHANGELOG.md
crates/companion_cli/src/: cli.rs  main.rs
crates/companion_cli/src/add_api/: mod.rs
crates/companion_cli/src/api_remove/: mod.rs
crates/companion_cli/src/init/: mod.rs  tui.rs
crates/companion_cli/templates/: dao.rs.tmpl  entity.rs.tmpl  route.rs.tmpl  service.rs.tmpl
crates/companion_cli/templates/init/no_docs/: build_docs.rs.tmpl  views_public.rs.tmpl
crates/companion_cli/templates/init/no_local_auth/: auth_bootstrap.rs.tmpl  auth_mod.rs.tmpl  auth_providers_mod.rs.tmpl  db_dao_context.rs.tmpl  db_dao_mod.rs.tmpl  db_entities_mod.rs.tmpl  db_entities_prelude.rs.tmpl  routes_api_mod.rs.tmpl  routes_api_router.rs.tmpl  services_context.rs.tmpl  services_mod.rs.tmpl
crates/realtime/: CHANGELOG.md  Cargo.toml  README.md
crates/realtime/examples/: chat_demo.rs  drawing_demo.rs
crates/realtime/examples/views/: chat_demo.html  drawing_demo.html
crates/realtime/src/client/: api.rs  config.rs  mod.rs
crates/realtime/src/protocol/: mod.rs
crates/realtime/src/server/: axum.rs  config.rs  error.rs  hub.rs  mod.rs  policy.rs  runtime.rs  session.rs  types.rs
crates/server/: AGENTS.md  Cargo.toml  DDL.txt  build.rs
crates/server/.scaffold/: apis.json
crates/server/examples/: client.rs  realtime_client.rs
crates/server/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  middleware.rs  response.rs  state.rs  test_helpers.rs
crates/server/src/auth/: bootstrap.rs  jwt.rs  mod.rs  password.rs  role_layer.rs  types.rs
crates/server/src/auth/providers/: local.rs  mod.rs  providers.rs  registry.rs
crates/server/src/config/: configs.rs  defaults.rs  envconfig.rs  mod.rs  validate.rs
crates/server/src/db/: connection.rs  entity_catalog.rs  mod.rs
crates/server/src/db/dao/: base.rs  base_traits.rs  context.rs  error.rs  mod.rs  refresh_token_dao.rs  todo_dao.rs  user_dao.rs
crates/server/src/db/entities/: mod.rs  prelude.rs
crates/server/src/db/providers/: mod.rs  postgres.rs  registry.rs  sqlite.rs
crates/server/src/middleware/: auth.rs  guards.rs  json_error.rs  mod.rs  panic.rs
crates/server/src/realtime/: chat.rs  mod.rs  verifier.rs
crates/server/src/routes/: admin.rs  auth.rs  base_api_router.rs  base_router.rs  crud_api_router.rs  entry.rs  mod.rs  protected.rs  public.rs  response.rs  route_list.rs  todo_crud.rs
crates/server/src/routes/api/: admin.rs  auth.rs  chat.rs  mod.rs  protected.rs  public.rs  realtime.rs  router.rs  todo_crud.rs
crates/server/src/routes/middleware/: auth.rs  json_error.rs  panic.rs
crates/server/src/routes/views/: chat.rs  mod.rs  public.rs  router.rs  todo.rs
crates/server/src/services/: auth_service.rs  chat_room_service.rs  context.rs  crud_service.rs  mod.rs  todo_service.rs  user_service.rs
crates/server/tests/: auth_flow.rs  mock_routes.rs  todo_routes.rs
crates/server/views/: base.html  chat.html  docs.html  entities.html  index.html  not_available.html  routes.html  todo.html
crates/server/views/docs/sections/: 01_getting_started.html  02_project_structure.html  03_auth.html  03_database.html  04_config.html  05_crud_router.html  05_routing.html  06_filters.html  06_logging.html  07_cli.html  08_Awesom.html  08_error_handling.html  09_realtime.html
examples/: client.rs
scripts/: install.sh
src/: config.rs  lib.rs  main.rs  role_layer.rs  state.rs  test_helpers.rs
src/auth/: jwt.rs  mod.rs  password.rs
src/db/: entities.rs  entity_catalog.rs  mod.rs  refresh_token_repo.rs  todo_repo.rs  user_repo.rs
src/db/dao/: base.rs  base_traits.rs  error.rs  mod.rs  refresh_token_dao.rs  todo_dao.rs  user_dao.rs
src/db/entities/: refresh_token.rs  todo_item.rs  todo_list.rs  user.rs
src/migration/: m20251230_create_refresh_tokens.rs  m20251230_create_users.rs  m20251231_add_last_login_to_users.rs  mod.rs
src/routes/: auth.rs  base_api_router.rs  base_router.rs  crud_router.rs  mod.rs  protected.rs  public.rs  route_list.rs  todo.rs  todo_crud.rs
src/services/: auth_service.rs  crud_service.rs  todo_service.rs  user_service.rs
tests/: auth_flow.rs  todo_routes.rs
views/: base.html  docs.html  entities.html  index.html  routes.html  todo.html
