[package]
name = "sample_server"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = { version="0.8.7", features=["json", "ws"] }
anyhow = "1.0.100"
thiserror="2.0.17"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dotenvy="0.15.7"
reqwest={version = "0.12.26", features=["json"]}
tower-http = { version = "0.6.8", features = ["trace"] }
tower = "0.5"
futures-util = "0.3"
