[package]
name = "sample_server_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.31", features = ["derive"] }
crossterm = "0.28.1"
dotenvy = "0.15.7"
ratatui = "0.29.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tempfile = "3.12.0"
walkdir = "2.5.0"
