[package]
name = "rust-oxide-cli"
version = "0.6.1"
edition = "2024"
description = "Companion CLI for the Rust Oxide backend framework"
readme = "README.md"
license = "MIT OR Apache-2.0"
include = [
    "src/**",
    "templates/**",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
]

[[bin]]
name = "oxide"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.31", features = ["derive"] }
crossterm = "0.28.1"
dotenvy = "0.15.7"
ratatui = "0.29.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tempfile = "3.12.0"
walkdir = "2.5.0"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = 0
strip = true
panic = "abort"
incremental = false

[profile.release.build-override]
opt-level = 0
codegen-units = 256
