[package]
name = "rust-oxide-realtime"
version = "0.2.0"
edition = "2024"
description = "Reusable realtime transport primitives for Axum servers and Rust websocket clients"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HarrisDePerceptron/Rust-Oxide"
homepage = "https://github.com/HarrisDePerceptron/Rust-Oxide"
documentation = "https://docs.rs/rust-oxide-realtime"
keywords = ["realtime", "websocket", "axum", "tokio"]
categories = ["web-programming::websocket", "asynchronous", "network-programming"]
include = [
    "src/**",
    "examples/**",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
]

[lib]
name = "realtime"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
chrono = { version = "0.4", features = ["clock", "std"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.43"
uuid = { version = "1.11", features = ["v4", "serde"] }
async-trait = "0.1.89"
