[package]
name = "rust_oxide"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version="0.8.7", features=["json", "ws"] }
anyhow = { version = "1.0.100", features = ["std"] }
argon2 = { version = "0.5", features = ["alloc"] }
askama = "0.15.1"
base_entity_derive = { path = "../base_entity_derive" }
chrono = { version = "0.4", features = ["clock", "serde", "std"] }
futures-util = "0.3"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
rand = "0.8"
reqwest={version = "0.12.26", features=["json"]}
sea-orm = { version = "2.0.0-rc.26", features = ["entity-registry", "macros", "mock", "runtime-tokio-rustls", "schema-sync", "sqlx-postgres", "with-chrono", "with-uuid", "with-json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror="2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6.8", features = ["trace", "fs", "catch-panic"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
dotenvy="0.15.7"
async-trait = "0.1.89"

[build-dependencies]
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full", "visit"] }
